update syslink creation

--- a/CONFIG.example
+++ b/CONFIG.example
@@ -8,7 +8,7 @@
 # 3- all the other files will be symlinked directly in the home
 
 # Ignore these
-cfg_ignore=("CONFIG" "README.md" "bin" "todo"	# This repo
+cfg_ignore=("CONFIG*" "README.md" "bin" "other"	# This repo
 	".git" ".gitignore" ".gitmodules"	# Git
 	"*.orig" "*.rej"			# Patch residues
 	".*.swp" "*~" "\#*\#"			# Vim/Emacs
